--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
   </properties>
 
   <dependencies>
-
     <!-- tests -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -44,6 +43,14 @@
     </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+        <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.6</version>
+          <configuration>
+            <mainClass>${main.class}</mainClass>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
