Xml Visitor begin

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-database/data/
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+*test*.xml
 
 ### STS ###
 .apt_generated
