--- a/shaper-mirror/pom.xml
+++ b/shaper-mirror/pom.xml
@@ -8,11 +8,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>shaper-gui</artifactId>
+  <artifactId>shaper-mirror</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>shaper-gui</name>
+  <name>shaper-converter</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -31,6 +31,7 @@
     </dependency>
 
     <!-- ===== Bibliothèques tierces ===== -->
+
   </dependencies>
 
   <build>
