--- a/shaper-surface/pom.xml
+++ b/shaper-surface/pom.xml
@@ -8,15 +8,15 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>shaper-mirror</artifactId>
+  <artifactId>shaper-surface</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>shaper-mirror</name>
+  <name>shaper-surface</name>
   <url>http://maven.apache.org</url>
 
   <properties>
-    <main.class>fr.univ.shaper.MirrorApp</main.class>
+    <main.class>fr.univ.shaper.SurfaceApp</main.class>
   </properties>
 
   <dependencies>
